--- a/microserver/www/style.css
+++ b/microserver/www/style.css
@@ -5,7 +5,7 @@ html, body {
 body {
  background-color: white; 
  font-family: Verdana, sans-serif; 
- font-size: 100%;
+ font-size: 150%;
  }
 h1 {
  font-size: 200%; 
@@ -15,13 +15,13 @@ h1 {
 h2 {
  font-size: 150%; 
  color: red; 
- padding-left: 15px;
+ text-align: center;
  }
 p,ul,li,td {
  color: black; 
  }
 a:link {
- color: green;
+ color: red;
  text-decoration: underline;
  }
 a:visited {
