--- a/microserver/www/style.css
+++ b/microserver/www/style.css
@@ -1,36 +1,15 @@
-html, body {
- margin: 0;
- padding: 0;
- }
+
 body {
- background-color: white; 
- font-family: Verdana, sans-serif; 
- font-size: 100%;
- }
-h1 {
- font-size: 200%; 
- color: navy; 
- text-align: center;
- }
-h2 {
- font-size: 150%; 
- color: red; 
- padding-left: 15px;
- }
-p,ul,li,td {
- color: black; 
- }
-a:link {
- color: green;
- text-decoration: underline;
- }
-a:visited {
- color: gray;
- }
-a:hover {
- color: red;
- text-decoration: none;
+  padding: 1rem;
+  font-family: 'Lato', sans-serif;;
 }
-a:active, a:focus {
- color: red;
+
+a {
+  color: #2D91F8;
+  padding: 0.25rem 0.5rem;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
 }
