Adding AR pages for ARindex.html to show static contetn. adding AR in URLS.PY to show dynamic AR content. Adding samsung logo. Updating style.css to make image float centre. Adding a no-tracking html file to allow testing of a 3D scene with no camera added. Used for debug! :-)

--- a/microserver/www/style.css
+++ b/microserver/www/style.css
@@ -31,3 +31,11 @@ a:hover {
 a:active, a:focus {
  color: red;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+}
+
